--- a/config.json
+++ b/config.json
@@ -1,41 +1,40 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "Midgard",
+    "appTitle": "working demo",
     "modules": [
         {
-          "url": "https://github.com/Humanitec/dashboards_client_angular.git",
-          "name": "dashboards",
-          "config": {
-            "entryPointComponent": "",
-            "routingModuleOptions": {
-              "path": "src/midgard/midgard-routing.module.ts",
-              "parentComponent": "MidgardComponent",
-              "childrenArrayIndex": "0"
-            },
-            "parentExitPointComponent": {
-              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
-              "options": {
-                "icon": "dashboard",
-                "label": "Dashboards",
-                "route": "dashboards"
-              },
-              "elementId": "navbar",
-              "componentSelector": "mg-navbar-elem"
+            "url": "git@github.com:Humanitec-Walhall/midgard-documents.git",
+            "name": "documents",
+            "config": {
+                "entryPointComponent": "",
+                "routingModuleOptions": {
+                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
+                    "parentComponent": "WorkflowLevel2DetailComponent",
+                    "childrenArrayIndex": "1"
+                },
+                "parentExitPointComponent": {
+                    "path": "projects/midgard-angular/src/lib/pages/workflow-level2/detail/workflow-level2-detail.component.html",
+                    "options": {
+                        "label": "Documents",
+                        "routerOutlet": "documents"
+                    },
+                    "elementId": "tabs",
+                    "componentSelector": "mat-tab"
+                }
             }
-          }
         },
         {
-            "url": "https://github.com/Humanitec/products_client_angular.git",
+            "url": "git@github.com:Humanitec-Walhall/midgard-products.git",
             "name": "products",
             "config": {
                 "entryPointComponent": "",
                 "routingModuleOptions": {
-                    "path": "src/midgard/midgard-routing.module.ts",
+                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
                     "parentComponent": "MidgardComponent",
                     "childrenArrayIndex": "0"
                 },
                 "parentExitPointComponent": {
-                    "path": "src/midgard/components/nav-bar/nav-bar.component.html",
+                    "path": "projects/midgard-angular/src/lib/components/nav-bar/nav-bar.component.html",
                     "options": {
                         "icon": "local_offer",
                         "label": "Products",
@@ -45,29 +44,6 @@
                     "componentSelector": "mg-navbar-elem"
                 }
             }
-        },
-        {
-          "url": "https://github.com/Humanitec/documents_client_angular.git",
-          "name": "documents",
-          "config": {
-            "entryPointComponent": "",
-            "routingModuleOptions": {
-              "path": "src/midgard/midgard-routing.module.ts",
-              "parentComponent": "MidgardComponent",
-              "childrenArrayIndex": "0"
-            },
-            "parentExitPointComponent": {
-              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
-              "options": {
-                "icon": "class",
-                "label": "Documents",
-                "route": "documents"
-              },
-              "elementId": "navbar",
-              "componentSelector": "mg-navbar-elem"
-            }
-          }
         }
     ]
 }
-
