--- a/config.json
+++ b/config.json
@@ -1,30 +1,9 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "DemoTest2",
+    "appTitle": "last App",
     "modules": [
         {
-            "url": "git@github.com:Humanitec-Walhall/midgard-documents.git",
-            "name": "documents",
-            "config": {
-                "entryPointComponent": "",
-                "routingModuleOptions": {
-                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
-                    "parentComponent": "WorkflowLevel2DetailComponent",
-                    "childrenArrayIndex": "1"
-                },
-                "parentExitPointComponent": {
-                    "path": "projects/midgard-angular/src/lib/pages/workflow-level2/detail/workflow-level2-detail.component.html",
-                    "options": {
-                        "label": "Documents",
-                        "routerOutlet": "documents"
-                    },
-                    "elementId": "tabs",
-                    "componentSelector": "mat-tab"
-                }
-            }
-        },
-        {
-            "url": "git@github.com:Humanitec-Walhall/midgard-products.git",
+            "url": "https://github.com/jefmoura/products_client_angular.git",
             "name": "products",
             "config": {
                 "entryPointComponent": "",
