--- a/config.json
+++ b/config.json
@@ -1,40 +1,41 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "greg's app",
+    "appTitle": "Midgard",
     "modules": [
         {
-            "url": "git@github.com:Humanitec-Walhall/midgard-documents.git",
-            "name": "documents",
-            "config": {
-                "entryPointComponent": "",
-                "routingModuleOptions": {
-                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
-                    "parentComponent": "WorkflowLevel2DetailComponent",
-                    "childrenArrayIndex": "1"
-                },
-                "parentExitPointComponent": {
-                    "path": "projects/midgard-angular/src/lib/pages/workflow-level2/detail/workflow-level2-detail.component.html",
-                    "options": {
-                        "label": "Documents",
-                        "routerOutlet": "documents"
-                    },
-                    "elementId": "tabs",
-                    "componentSelector": "mat-tab"
-                }
+          "url": "https://github.com/Humanitec/dashboards_client_angular.git",
+          "name": "dashboards",
+          "config": {
+            "entryPointComponent": "",
+            "routingModuleOptions": {
+              "path": "src/midgard/midgard-routing.module.ts",
+              "parentComponent": "MidgardComponent",
+              "childrenArrayIndex": "0"
+            },
+            "parentExitPointComponent": {
+              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
+              "options": {
+                "icon": "dashboard",
+                "label": "Dashboards",
+                "route": "dashboards"
+              },
+              "elementId": "navbar",
+              "componentSelector": "mg-navbar-elem"
             }
+          }
         },
         {
-            "url": "git@github.com:Humanitec-Walhall/midgard-products.git",
+            "url": "https://github.com/Humanitec/products_client_angular.git",
             "name": "products",
             "config": {
                 "entryPointComponent": "",
                 "routingModuleOptions": {
-                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
+                    "path": "src/midgard/midgard-routing.module.ts",
                     "parentComponent": "MidgardComponent",
                     "childrenArrayIndex": "0"
                 },
                 "parentExitPointComponent": {
-                    "path": "projects/midgard-angular/src/lib/components/nav-bar/nav-bar.component.html",
+                    "path": "src/midgard/components/nav-bar/nav-bar.component.html",
                     "options": {
                         "icon": "local_offer",
                         "label": "Products",
@@ -44,6 +45,51 @@
                     "componentSelector": "mg-navbar-elem"
                 }
             }
+        },
+        {
+          "url": "https://github.com/Humanitec/kupfer_contact_appointment_client_angular.git",
+          "name": "contacts",
+          "config": {
+            "entryPointComponent": "",
+            "routingModuleOptions": {
+              "path": "src/midgard/midgard-routing.module.ts",
+              "parentComponent": "MidgardComponent",
+              "childrenArrayIndex": "0"
+            },
+            "parentExitPointComponent": {
+              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
+              "options": {
+                "icon": "local_offer",
+                "label": "Contacts",
+                "route": "contacts"
+              },
+              "elementId": "navbar",
+              "componentSelector": "mg-navbar-elem"
+            }
+          }
+        },
+        {
+          "url": "https://github.com/kupfer-software/kupfer_document_client_angular.git",
+          "name": "documents",
+          "config": {
+            "entryPointComponent": "",
+            "routingModuleOptions": {
+              "path": "src/midgard/midgard-routing.module.ts",
+              "parentComponent": "MidgardComponent",
+              "childrenArrayIndex": "0"
+            },
+            "parentExitPointComponent": {
+              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
+              "options": {
+                "icon": "class",
+                "label": "Documents",
+                "route": "documents"
+              },
+              "elementId": "navbar",
+              "componentSelector": "mg-navbar-elem"
+            }
+          }
         }
     ]
 }
+
