--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "./src/clients/locations/node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": []
           },
