--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "Anatolii's App",
+    "appTitle": "Midgard",
     "modules": [
         {
           "url": "https://github.com/Humanitec/dashboards_client_angular.git",
@@ -47,7 +47,7 @@
             }
         },
         {
-          "url": "https://github.com/Humanitec/kupfer_contact_appointment_client_angular.git",
+          "url": "https://github.com/kupfer-software/kupfer_contact_appointment_client_angular.git",
           "name": "contacts",
           "config": {
             "entryPointComponent": "",
@@ -91,51 +91,6 @@
           }
         },
         {
-          "url": "https://github.com/kupfer-software/kupfer_document_client_angular.git",
-          "name": "documents",
-          "config": {
-            "entryPointComponent": "",
-            "routingModuleOptions": {
-              "path": "src/midgard/midgard-routing.module.ts",
-              "parentComponent": "MidgardComponent",
-              "childrenArrayIndex": "0"
-            },
-            "parentExitPointComponent": {
-              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
-              "options": {
-                "icon": "class",
-                "label": "Documents",
-                "route": "documents"
-              },
-              "elementId": "navbar",
-              "componentSelector": "mg-navbar-elem"
-            }
-          }
-        },
-        {
-          "url":"https://github.com/Humanitec/locations_client_angular.git",
-          "name":"locations",
-          "config":{
-            "styles":"./src/clients/locations/node_modules/leaflet/dist/leaflet.css",
-            "entryPointComponent":"",
-            "routingModuleOptions":{
-              "path":"src/midgard/midgard-routing.module.ts",
-              "parentComponent":"MidgardComponent",
-              "childrenArrayIndex":"0"
-            },
-            "parentExitPointComponent":{
-              "path":"src/midgard/components/nav-bar/nav-bar.component.html",
-              "options":{
-                "icon":"map",
-                "label":"Locations",
-                "route":"locations"
-              },
-              "elementId":"navbar",
-              "componentSelector":"mg-navbar-elem"
-            }
-          }
-        },
-        {
           "url":"https://github.com/Humanitec/locations_client_angular.git",
           "name":"locations",
           "config":{
@@ -160,7 +115,7 @@
         },
         {
           "url": "git@github.com:Humanitec/blueprint_client_angular.git",
-          "name": "blueprint-client",
+          "name": "blueprintClient",
           "config": {
             "entryPointComponent": "",
             "routingModuleOptions": {
