--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.10",
+    "@angular/animations": "^7.2.13",
     "@angular/cdk": "^6.2.0",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
+    "@angular/common": "^7.2.13",
+    "@angular/compiler": "^7.2.13",
+    "@angular/core": "^7.2.13",
+    "@angular/forms": "^7.2.13",
+    "@angular/http": "^7.2.13",
     "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/router": "^6.1.10",
+    "@angular/platform-browser": "^7.2.13",
+    "@angular/platform-browser-dynamic": "^7.2.13",
+    "@angular/router": "^7.2.13",
     "@ngx-translate/core": "^11.0.1",
     "apollo-angular": "1.5.0",
     "apollo-angular-link-http": "1.5.0",
@@ -41,7 +41,7 @@
     "graphql-tag": "2.10.1",
     "midgard-core": "0.1.2",
     "moment": "2.22.2",
-    "rxjs": "6.3.2",
+    "rxjs": "6.4.0",
     "rxjs-compat": "6.3.2",
     "zone.js": "~0.8.26"
   },
@@ -50,9 +50,9 @@
     "@angular-devkit/build-ng-packagr": "~0.7.0",
     "@angular-devkit/core": "^0.6.8",
     "@angular-devkit/schematics": "^0.8.8",
-    "@angular/cli": "~6.1.5",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/language-service": "^6.1.10",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.13",
+    "@angular/language-service": "^7.2.13",
     "@compodoc/compodoc": "^1.1.7",
     "@pact-foundation/karma-pact": "^2.1.3",
     "@pact-foundation/pact-node": "^6.5.0",
@@ -69,14 +69,14 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "midgard-schematics": "^1.1.21",
+    "midgard-schematics": "^1.1.22",
     "ng-packagr": "^3.0.0",
     "protractor": "~5.4.0",
     "redux-devtools-extension": "^2.13.5",
     "ts-node": "5.0.1",
-    "tsickle": "^0.33.1",
+    "tsickle": "^0.34.3",
     "tslib": "^1.9.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.8.0"
+    "typescript": "~3.2.4"
   }
 }
