--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "clients",
+  "newProjectRoot": "projects",
   "projects": {
     "midgard-angular": {
       "root": "",
@@ -22,8 +22,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "./src/clients/locations/node_modules/leaflet/dist/leaflet.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
