--- a/config.json
+++ b/config.json
@@ -114,7 +114,7 @@
           }
         },
         {
-          "url": "git@github.com:Humanitec/blueprint_client_angular.git",
+          "url": "https://github.com/Humanitec/blueprint_client_angular.git",
           "name": "blueprint-client",
           "config": {
             "entryPointComponent": "",
