--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "midgard-core": "0.1.2",
     "moment": "2.22.2",
     "rxjs": "6.3.2",
-    "rxjs-compat": "^6.3.2",
+    "rxjs-compat": "6.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
