--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.13",
-    "@angular/cdk": "^6.2.0",
+    "@angular/cdk": "7.3.7",
     "@angular/common": "^7.2.13",
     "@angular/compiler": "^7.2.13",
     "@angular/core": "^7.2.13",
@@ -36,13 +36,13 @@
     "apollo-link-context": "1.0.14",
     "apollo-utilities": "1.0.25",
     "core-js": "2.6.0",
-    "freyja-ui": "^0.4.1",
+    "freyja-ui": "0.4.5",
     "graphql": "0.13.2",
     "graphql-tag": "2.10.1",
     "midgard-core": "0.1.2",
     "moment": "2.22.2",
-    "rxjs": "6.4.0",
-    "rxjs-compat": "6.4.0",
+    "rxjs": "6.3.2",
+    "rxjs-compat": "6.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
