--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "apollo-link-context": "1.0.14",
     "apollo-utilities": "1.0.25",
     "core-js": "2.6.0",
-    "freyja-ui": "0.4.9",
+    "freyja-ui": "^0.4.10",
     "graphql": "0.13.2",
     "graphql-tag": "2.10.1",
     "midgard-core": "0.1.2",
