--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "graphql-tag": "2.10.1",
     "midgard-core": "0.1.2",
     "moment": "2.22.2",
+    "ng-click-outside": "^4.0.0",
     "rxjs": "6.3.2",
     "rxjs-compat": "6.3.2",
     "zone.js": "~0.8.26"
