--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "types": ["jasmine"],
     "typeRoots": [
       "node_modules/@types"
     ],
