--- a/config.json
+++ b/config.json
@@ -3,28 +3,6 @@
     "appTitle": "Midgard",
     "modules": [
         {
-          "url": "https://github.com/Humanitec/dashboards_client_angular.git",
-          "name": "dashboards",
-          "config": {
-            "entryPointComponent": "",
-            "routingModuleOptions": {
-              "path": "src/midgard/midgard-routing.module.ts",
-              "parentComponent": "MidgardComponent",
-              "childrenArrayIndex": "0"
-            },
-            "parentExitPointComponent": {
-              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
-              "options": {
-                "icon": "dashboard",
-                "label": "Dashboards",
-                "route": "dashboards"
-              },
-              "elementId": "navbar",
-              "componentSelector": "mg-navbar-elem"
-            }
-          }
-        },
-        {
             "url": "https://github.com/Humanitec/products_client_angular.git",
             "name": "products",
             "config": {
@@ -85,6 +63,50 @@
                 "icon": "rounded_corner",
                 "label": "Blueprint",
                 "route": "blueprint-client"
+              },
+              "elementId": "navbar",
+              "componentSelector": "mg-navbar-elem"
+            }
+          }
+        },
+        {
+          "url": "https://github.com/kupfer-software/kupfer_document_client_angular.git",
+          "name": "documents",
+          "config": {
+            "entryPointComponent": "",
+            "routingModuleOptions": {
+              "path": "src/midgard/midgard-routing.module.ts",
+              "parentComponent": "MidgardComponent",
+              "childrenArrayIndex": "0"
+            },
+            "parentExitPointComponent": {
+              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
+              "options": {
+                "icon": "class",
+                "label": "Documents",
+                "route": "documents"
+              },
+              "elementId": "navbar",
+              "componentSelector": "mg-navbar-elem"
+            }
+          }
+        },
+        {
+          "url": "https://github.com/kupfer-software/kupfer_contact_appointment_client_angular.git",
+          "name": "contacts",
+          "config": {
+            "entryPointComponent": "",
+            "routingModuleOptions": {
+              "path": "src/midgard/midgard-routing.module.ts",
+              "parentComponent": "MidgardComponent",
+              "childrenArrayIndex": "0"
+            },
+            "parentExitPointComponent": {
+              "path": "src/midgard/components/nav-bar/nav-bar.component.html",
+              "options": {
+                "icon": "local_offer",
+                "label": "Contacts",
+                "route": "contacts"
               },
               "elementId": "navbar",
               "componentSelector": "mg-navbar-elem"
