--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,9 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
+              },
               "src/styles.scss",
               "./src/clients/locations/node_modules/leaflet/dist/leaflet.css"
             ],
