add styles back

--- a/angular.json
+++ b/angular.json
@@ -21,8 +21,11 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "./src/clients/locations/node_modules/leaflet/dist/leaflet.css"
+            "styles":  [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
+              },
+              "src/styles.scss"
             ],
             "scripts": []
           },
