--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,7 @@
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
               },
-              "src/styles.scss",
-              "./src/clients/locations/node_modules/leaflet/dist/leaflet.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
