--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,8 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "./src/clients/blueprint-client/assets"
             ],
             "styles": [
               {
