--- a/angular.json
+++ b/angular.json
@@ -19,8 +19,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "./src/clients/blueprint-client/assets"
+              "src/assets"
             ],
             "styles": [
               {
